--- a/hw02.md
+++ b/hw02.md
@@ -1,17 +1,18 @@
 @macOS
 passing dat through protocol between view controllers
 ----
-//There is only one section in the Table View
-override func numberOfSections(in tableView: UITableView) -> Int {
+//There is only one section in the Table View.
+override func numberOfSections(in tableView: UITableView) -> Int
+{
     return 1
 }
 
-//ViewComtroller
+//ViewComtroller.
 Ctrl + Drag from the button to the green exit button on the View Controller and select the cancel: method. 
-@IBAction func done(segue:UIStoryboardSegue) {
-     let carDetailVC = segue.source as! CarDetailViewController
+@IBAction func done(segue:UIStoryboardSegue)
+{
+    let carDetailVC = segue.source as! CarDetailViewController
     newCar = carDetailVC.name
-       
     cars.append(newCar)
     tableView.reloadData()
 }
@@ -19,10 +20,12 @@ Ctrl + Drag from the button to the green exit button on the View Controller and 
 Now on the Document Outline two unwind segue buttons in the Car Detail View Controller list are displayed.
 Select the unwind segues and give it a identifier of cancelSegue and doneSegue in the Attributes inspector.
 
-//ViewController2
+//ViewController2.
 var name: String = ""
-override func prepare(for segue: UIStoryboardSegue, sender: Any?) {
-    if segue.identifier == "doneSegue" {
+override func prepare(for segue: UIStoryboardSegue, sender: Any?)
+{
+    if segue.identifier == "doneSegue"
+    {
         name = carName.text!
     }
 }
